--- a/cdm_integrated_assessment.Rmd
+++ b/cdm_integrated_assessment.Rmd
@@ -115,49 +115,66 @@ knitr::include_graphics("images/assessment/5_nutrient_budget.png")
 To falicitate management decision making, and comprehensive list of customised model post-processing exports has been created. The DMF exports encompass a wide range of critical CPS indicators, outlined in the tables below:
 
 
-These are defined in Table (Table \@ref(tab:A-dataclasses)).
+These are defined in Table (Table \@ref(tab:ass-dmftable)).
 
-```{r A-dmftable, echo=FALSE, message=FALSE, warning=FALSE}
+```{r ass-dmftable, echo=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
 library(kableExtra)
 library(readxl)
 library(rmarkdown)
-theSheet <- read_excel('tables/dmf.xlsx', sheet = 2)
-theSheet <- theSheet[theSheet$Table == "data",]
-theSheetGroups <- unique(theSheet$Group)
+theSheet <- read_excel('tables/dmf.xlsx', sheet = 1)
+#theSheet <- theSheet[theSheet$Table == "Data",]
+theSheetGroups <- unique(theSheet$CriticalCPS)
 
-kbl(theSheet[,4:10], caption = "Coorong Decision Making Framework", align = "l",) %>%
+kbl(theSheet[,3:6], caption = "Coorong Decision Making Framework", align = "l",) %>%
   pack_rows(theSheetGroups[1],
-            min(which(theSheet$Group == theSheetGroups[1])),
-            max(which(theSheet$Group == theSheetGroups[1])),
+            min(which(theSheet$CriticalCPS == theSheetGroups[1])),
+            max(which(theSheet$CriticalCPS == theSheetGroups[1])),
             background = '#ebebeb') %>%
   pack_rows(theSheetGroups[2],
-            min(which(theSheet$Group == theSheetGroups[2])),
-            max(which(theSheet$Group == theSheetGroups[2])),
+            min(which(theSheet$CriticalCPS == theSheetGroups[2])),
+            max(which(theSheet$CriticalCPS == theSheetGroups[2])),
             background = '#ebebeb') %>%
   pack_rows(theSheetGroups[3],
-					  min(which(theSheet$Group == theSheetGroups[3])),
-					  max(which(theSheet$Group == theSheetGroups[3])),
+					  min(which(theSheet$CriticalCPS == theSheetGroups[3])),
+					  max(which(theSheet$CriticalCPS == theSheetGroups[3])),
 					  background = '#ebebeb') %>%
   pack_rows(theSheetGroups[4],
-          	min(which(theSheet$Group == theSheetGroups[4])),
-          	max(which(theSheet$Group == theSheetGroups[4])),
+          	min(which(theSheet$CriticalCPS == theSheetGroups[4])),
+          	max(which(theSheet$CriticalCPS == theSheetGroups[4])),
           	background = '#ebebeb') %>%
   pack_rows(theSheetGroups[5],
-            min(which(theSheet$Group == theSheetGroups[5])),
-            max(which(theSheet$Group == theSheetGroups[5])),
+            min(which(theSheet$CriticalCPS == theSheetGroups[5])),
+            max(which(theSheet$CriticalCPS == theSheetGroups[5])),
             background = '#ebebeb') %>%
   pack_rows(theSheetGroups[6],
-            min(which(theSheet$Group == theSheetGroups[6])),
-            max(which(theSheet$Group == theSheetGroups[6])),
+            min(which(theSheet$CriticalCPS == theSheetGroups[6])),
+            max(which(theSheet$CriticalCPS == theSheetGroups[6])),
             background = '#ebebeb') %>%
-
+pack_rows(theSheetGroups[7],
+            min(which(theSheet$CriticalCPS == theSheetGroups[7])),
+            max(which(theSheet$CriticalCPS == theSheetGroups[7])),
+            background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[8],
+            min(which(theSheet$CriticalCPS == theSheetGroups[8])),
+            max(which(theSheet$CriticalCPS == theSheetGroups[8])),
+            background = '#ebebeb') %>%
+   pack_rows(theSheetGroups[9],
+            min(which(theSheet$CriticalCPS == theSheetGroups[9])),
+            max(which(theSheet$CriticalCPS == theSheetGroups[9])),
+            background = '#ebebeb') %>%
+   pack_rows(theSheetGroups[10],
+            min(which(theSheet$CriticalCPS == theSheetGroups[10])),
+            max(which(theSheet$CriticalCPS == theSheetGroups[10])),
+            background = '#ebebeb') %>%
+  
 row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
   kable_styling(full_width = F,font_size = 10) %>%
   column_spec(2, width_min = "7em") %>%
-  column_spec(3, width_max = "19em") %>%
+  column_spec(3, width_max = "10em") %>%
   column_spec(4, width_min = "10em") %>%
-  column_spec(5, width_min = "5em") %>%
+ # column_spec(5, width_min = "10em") %>%
+  #column_spec(6, width_min = "19em") %>%
     scroll_box(width = "700px", height = "4600px",
              fixed_thead = FALSE)
 ```
