--- a/cdm_integrated_assessment.Rmd
+++ b/cdm_integrated_assessment.Rmd
@@ -112,7 +112,7 @@ knitr::include_graphics("images/assessment/5_nutrient_budget.png")
 
 ## Coorong Decision Making Framework
 
-To facilitate management decision making, and comprehensive list of customised model post-processing exports has been created. The DMF exports encompass a wide range of critical CPS indicators.
+To facilitate management decision making, and comprehensive list of customised model post-processing exports has been created. The Decision Making Framework (DMF) exports encompass a wide range of critical CPS indicators.
 
 
 These are defined in Table (Table \@ref(tab:ass-dmftable)).
@@ -177,8 +177,45 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
   column_spec(4, width_min = "10em") %>%
  # column_spec(5, width_min = "10em") %>%
   #column_spec(6, width_min = "19em") %>%
-    scroll_box(width = "700px", height = "4600px",
+    scroll_box(width = "700px", height = "1000px",
              fixed_thead = FALSE)
+```
+
+<br>
+
+Outputs are initially grouped based upon the style of calculation required.
+
+An example of the outputs can be found  in Table (Table \@ref(tab:ass-DMFexportexample)).
+
+```{r ass-DMFexportexample, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet <- read_excel('tables/DMF_export_2.xlsx', sheet = 1)
+#theSheet <- theSheet[theSheet$Table == "Data",]
+theSheetGroups <- unique(theSheet$CPS)
+
+kbl(theSheet[,2:8], caption = "Coorong Decision Making Framework", align = "l",) %>%
+
+  pack_rows(theSheetGroups[1],
+            min(which(theSheet$CPS == theSheetGroups[1])),
+            max(which(theSheet$CPS == theSheetGroups[1])),
+            background = '#ebebeb') %>%
+  
+  
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = F,font_size = 10) #%>%
+   # scroll_box(fixed_thead = FALSE)
+  
+```
+
+In addition to the required DMF value, time series plots are also produced to provide context to the data analyst.
+
+```{r ass-pic2, echo = FALSE, out.width='100%', class = "text-image", fig.cap = "Critial CPS for macroinvertabrates where Average daily area (Km2) with water cover and <25 g/L Apr-Sep"}
+
+knitr::include_graphics('images/cdm/DMF_Example.png')
+
 ```
 
 ## Summary (Sept 2021)
